# parafile

./: .gitignore  README.md  RELEASE_NOTES.md  ai_processor.py  config.json  config_manager.py  gui.py  main.py  organizer.py  pyproject.toml  requirements.txt  text_extractor.py
.github/workflows/: ci.yml
config_templates/: researcher_template.json  startup_dataroom_template.json
docs/: CI_AUTO_FIX.md
src/: __init__.py  ai_processor.py  config_manager.py  gui.py  organizer.py  run_and_verify.py  test_data_generator.py  text_extractor.py
tests/: README.md  __init__.py  test_ai_processor.py  test_config_manager.py  test_organizer.py
